force-app/main/default/objects/AIModelConfiguration__c/AIModelConfiguration__c.object-meta.xml
<CustomObject>
    <description>Defines a specific AI model configuration,  provider, model version, and generation parameters, that can be assigned to one or more Agents, allowing model choice and tuning to be managed centrally rather than duplicated per agent.</description>
    <label>AI Model Configuration</label>
    <nameField>
        <label>AI Model Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>🧠 AI Model Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>