force-app/main/default/objects/AIModelConfiguration__c/fields/AIProvider__c.field-meta.xml
<CustomField>
    <fullName>AIProvider__c</fullName>
    <description>The AI provider this configuration calls.</description>
    <inlineHelpText>Select which provider this model configuration is for.</inlineHelpText>
    <label>AI Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anthropic</fullName>
            </value>
            <value>
                <fullName>Open AI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>