force-app/main/default/objects/AIModelConfiguration__c/fields/ApiPath__c.field-meta.xml
<CustomField>
    <fullName>ApiPath__c</fullName>
    <description>The path appended to the Named Credential&apos;s base URL to reach this model&apos;s API endpoint, e.g. /v1/messages.</description>
    <inlineHelpText>Enter the endpoint path for this model&apos;s API call, e.g. /v1/messages for Anthropic or /v1/chat/completions for OpenAI. Required for calls using this configuration to succeed.</inlineHelpText>
    <label>Api Path</label>
    <length>100</length>
    <type>Text</type>
</CustomField>