force-app/main/default/objects/AIModelConfiguration__c/fields/ApiVersionHeaderName__c.field-meta.xml
<CustomField>
    <fullName>ApiVersionHeaderName__c</fullName>
    <description>The name of the HTTP header this provider expects for its API version, if any, e.g. anthropic-version. Left blank when the provider needs no such header (e.g. OpenAI).</description>
    <inlineHelpText>Enter the API version header name this provider expects, if any. Leave blank if this provider does not use one.</inlineHelpText>
    <label>Api Version Header Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>