force-app/main/default/objects/AIModelConfiguration__c/fields/ApiVersionHeaderValue__c.field-meta.xml
<CustomField>
    <fullName>ApiVersionHeaderValue__c</fullName>
    <description>The value to send for ApiVersionHeaderName__c, e.g. 2023-06-01. Ignored when ApiVersionHeaderName__c is blank.</description>
    <inlineHelpText>Enter the value for the API version header, if this provider uses one.</inlineHelpText>
    <label>Api Version Header Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>