force-app/main/default/objects/AIModelConfiguration__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this model configuration is currently available for use by an agent.</description>
    <inlineHelpText>Turn this off to retire a model configuration without deleting it.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>