force-app/main/default/objects/AIModelConfiguration__c/fields/MaximumOutputTokens__c.field-meta.xml
<CustomField>
    <fullName>MaximumOutputTokens__c</fullName>
    <description>The maximum number of tokens the model is allowed to generate in a single response.</description>
    <inlineHelpText>Set a cap on response length to control cost and keep answers focused.</inlineHelpText>
    <label>Maximum Output Tokens</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>