force-app/main/default/objects/AIModelConfiguration__c/fields/ModelIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ModelIdentifier__c</fullName>
    <description>The exact model string used when calling the AI provider&apos;s API.</description>
    <inlineHelpText>Enter the exact model identifier required by the API call. This must match the provider&apos;s current model string exactly, or calls using this configuration will fail.</inlineHelpText>
    <label>Model Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>