force-app/main/default/objects/AIModelConfiguration__c/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <description>The Named Credential used to authenticate callouts to this model&apos;s API endpoint.</description>
    <inlineHelpText>Enter the Named Credential that holds the authentication details for this model&apos;s API.</inlineHelpText>
    <label>Named Credential</label>
    <length>50</length>
    <type>Text</type>
</CustomField>