force-app/main/default/objects/AIModelConfiguration__c/fields/RetryAttempts__c.field-meta.xml
<CustomField>
    <fullName>RetryAttempts__c</fullName>
    <description>How many times to retry a callout to this model after a retryable failure (timeout, 429, 5xx) before giving up.</description>
    <inlineHelpText>Set how many additional attempts to make after a failed call to this model before giving up.</inlineHelpText>
    <label>Retry Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>