force-app/main/default/objects/AIModelConfiguration__c/fields/SystemTimeoutSeconds__c.field-meta.xml
<CustomField>
    <fullName>SystemTimeoutSeconds__c</fullName>
    <description>The number of seconds to wait for a response from this model before considering the call failed.</description>
    <inlineHelpText>Set how long to wait before a call to this model is treated as timed out.</inlineHelpText>
    <label>System Timeout Seconds</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>