force-app/main/default/objects/AIModelConfiguration__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <description>Controls the randomness of the model&apos;s output, lower values produce more consistent, predictable responses.</description>
    <inlineHelpText>Use a low value for consistent, predictable responses, recommended for compliance-sensitive scenarios. Use a higher value for more varied phrasing.</inlineHelpText>
    <label>Temperature</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>