force-app/main/default/objects/AIModelConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>AIProvider__c</columns>
    <columns>ModelIdentifier__c</columns>
    <columns>Temperature__c</columns>
    <columns>MaximumOutputTokens__c</columns>
    <columns>NamedCredential__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>